apps/base/mediamanager/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mediamanager
  labels:
    k8s.dimarco-server.site/scrape: "true"
