apps/base/mediamanager/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamanager-svc
spec:
  selector:
    app: mediamanager
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediamanager-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/ignore: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "mediamanager.dimarco-server.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediamanager-svc
                port:
                  name: http
  tls:
    - hosts:
        - "mediamanager.dimarco-server.site"
      secretName: mediamanager-tls
